--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container m-t-40">
         <div class="row">
-            
+            <!-- <div class="box">1</div> -->
         </div>
     </div>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
